--- a/plists/spotify.plist
+++ b/plists/spotify.plist
@@ -2,46 +2,30 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-	<key>items</key>
-	<array>
-		<dict>
-			<key>assets</key>
-			<array>
-				<dict>
-					<key>kind</key>
-					<string>software-package</string>
-					<key>url</key>
-					<string>https://lucaiii.github.io/lumosign/ipas/spotify.ipa</string>
-				</dict>
-				<dict>
-					<key>kind</key>
-					<string>display-image</string>
-					<key>needs-shine</key>
-					<true/>
-					<key>url</key>
-					<string>https://i2.wp.com/ipswbeta.com/wp-content/uploads/2017/11/spotify.png</string>
-				</dict>
-				<dict>
-					<key>kind</key>
-					<string>full-size-image</string>
-					<key>needs-shine</key>
-					<true/>
-					<key>url</key>
-					<string>https://i2.wp.com/ipswbeta.com/wp-content/uploads/2017/11/spotify.png</string>
-				</dict>
-			</array>
-			<key>metadata</key>
-			<dict>
-				<key>bundle-identifier</key>
-				<string>com.spotify.client</string>
-				<key>bundle-version</key>
-				<string>8.4.3</string>
-				<key>kind</key>
-				<string>software</string>
-				<key>title</key>
-				<string>Spotify</string>
-			</dict>
-		</dict>
-	</array>
+ <key>items</key>
+ <array>
+  <dict>
+   <key>assets</key>
+   <array>
+    <dict>
+     <key>kind</key>
+     <string>software-package</string>
+     <key>url</key>
+     <string>https://lucaiii.github.io/lumosign/ipas/spotify.ipa</string>
+    </dict>
+   </array>
+   <key>metadata</key>
+   <dict>
+    <key>bundle-identifier</key>
+    <string>com.spotify.client</string>
+    <key>bundle-version</key>
+    <string>8.4.3</string>
+    <key>kind</key>
+    <string>software</string>
+    <key>title</key>
+    <string>SPOTIFY! that free shit nigga.</string>
+   </dict>
+  </dict>
+ </array>
 </dict>
 </plist>
