--- a/plists/spotify.plist
+++ b/plists/spotify.plist
@@ -23,7 +23,7 @@
     <key>kind</key>
     <string>software</string>
     <key>title</key>
-    <string>SPOTIFY! that free shit nigga.</string>
+    <string><![CDATA[Spotify]]></string>
    </dict>
   </dict>
  </array>
